# river-api

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-container.yml  pytest.yml
app/: config.py  crud.py  db.py  main.py  utils.py
app/astrocast/: classes.py  models.py  views.py
app/sensor_devices/: models.py  views.py
app/sensor_parameters/: models.py  views.py
app/sensors/: models.py  service.py  utils.py  views.py
app/station_sensors/: models.py  views.py
app/stations/: models.py  utils.py  views.py
app/tests/: conftest.py  test_areas.py
migrations/: env.py
migrations/versions/: 06d7ff353efa_add_sensor_equation_fields.py  09651fa5f642_remove_sensorid.py  123f25fa96a8_add_sensor_id_to_parameter.py  24f8948791d7_set_unique_constraint_to_messageguid.py  258bcd22c26c_add_iterators_and_retrieved_at_for_.py  2999c593bbba_reinit_db_without_geospatial_library_.py  30c99808d7f4_add_unique_message_constraint.py  3293bb5fb929_add_station_data.py  483ca00f1861_set_field_id_to_non_null.py  48f707deaf66_add_fields_to_station_data.py  4af189ae2136_add_calibrations_as_json_objects.py  4ccae82ccb31_add_foreign_key_relationship_to_sensor_.py  4d5081c5ec9a_add_astrocast_message_table.py  518e5b4278c4_add_calibration_table.py  599535d5770f_add_calibration_table_into_env_.py  5a7ba47c4fc9_modify_unique_key_on_station_sensors.py  5e3ae1f92272_add_unique_field_id.py  65b08aa7e6b2_modify_unique_constraint_to_prevent_.py  66b02583fc42_remove_station_position_constraint.py  6e20d8a1cc50_add_sensor_devices.py  7c704b70a373_add_control_message_table.py  (+16 more)
(+13 files in other folders)
